<resources>
    <string name="app_name">Task List</string>
    <string name="no_data">No Data</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_low">Priority Low</string>
    <string name="priority_high">Priority High</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="new_task">New Task</string>
    <string name="delete">Delete</string>
    <string name="priority_indicator">Priority Indicator</string>
    <string name="high_priority">High Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="medium_priority">Medium Priority</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

</resources>