<?xml version="1.0" encoding="utf-8"?>
<!--Data Binding Layout-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Data Objects-->
    <data>
        <variable
            name="args"
            type="com.aditya.task_list.ui.fragments.EditFragmentArgs" />
    </data>

    <!--Container View Screen-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        tools:context=".ui.fragments.EditFragment">

        <!--Title Input View-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_lay"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@{args.task.title}"
                android:inputType="textPersonName"
                android:paddingStart="24dp"
                android:paddingEnd="24dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Priority Input View-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priority_lay"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/priority"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_lay">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:id="@+id/option_dropdown"
                android:inputType="none"
                android:paddingStart="24dp"
                android:parsePriorityToText="@{args.task.priority}"
                android:paddingEnd="24dp"
                android:layout_height="match_parent"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Description Input View-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/desc_lay"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/priority_lay"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/desc_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:hint="@string/description"
                android:gravity="start|top"
                android:ems="10"
                android:text="@{args.task.description}"
                android:inputType="textMultiLine"
                android:paddingStart="24dp"
                android:paddingEnd="24dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Save Fab-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:text="@string/save"
            app:iconTint="@color/white"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:backgroundTint="@color/color_icon_purple"
            android:id="@+id/save_fab"
            android:textAlignment="center"
            app:icon="@drawable/ic_save"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>